# testCpack

./: CMakeLists.txt  HelloGitConfig.h.in  VersionFromGit.cmake  hellogit.cc
